07_calico_network_policy/1-pod-svc-nginx-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: development
  labels:
    app: webapp
    role: backend
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: backend
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: development
  labels:
    app: webapp
    role: backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp
    role: backend
  type: ClusterIP
